linux/driver/tmp/3.13.11-ckt15/blk_queue_hardsect_size.log
+ gcc -Os -isystem /lib/modules/3.13.11-ckt15/build/include -isystem /lib/modules/3.13.11-ckt15/build/include/uapi -isystem /lib/modules/3.13.11-ckt15//source/arch/x86/include/generated -I /lib/modules/3.13.11-ckt15//source/arch/x86/include -I /lib/modules/3.13.11-ckt15//source/include -Wall -Werror -Werror-implicit-function-declaration -fno-strict-aliasing -include generated/autoconf.h -o tmp/3.13.11-ckt15/blk_queue_hardsect_size.E.c -E /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_hardsect_size.c
+ gcc -Os -isystem /lib/modules/3.13.11-ckt15/build/include -isystem /lib/modules/3.13.11-ckt15/build/include/uapi -isystem /lib/modules/3.13.11-ckt15//source/arch/x86/include/generated -I /lib/modules/3.13.11-ckt15//source/arch/x86/include -I /lib/modules/3.13.11-ckt15//source/include -Wall -Werror -Werror-implicit-function-declaration -fno-strict-aliasing -include generated/autoconf.h -o tmp/3.13.11-ckt15/blk_queue_hardsect_size.o -c /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_hardsect_size.c
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_hardsect_size.c: In function ‘foo’:
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_hardsect_size.c:9:2: error: implicit declaration of function ‘blk_queue_hardsect_size’ [-Werror=implicit-function-declaration]
  blk_queue_hardsect_size(q, 1);
  ^
cc1: all warnings being treated as errors
